--- a/src/Routes/Home/Home.styles.css
+++ b/src/Routes/Home/Home.styles.css
@@ -1,7 +1,9 @@
 .hero-container {
+  display: grid;
+  place-items: center;
   width: 90vw;
-  height: fit-content;
-  padding-top: 40px;
+  height: 100%;
+  padding-bottom: 10em;
 }
 .hero-container p,
 button {
