--- a/src/index.css
+++ b/src/index.css
@@ -154,6 +154,9 @@ h6 {
   display: inline-block;
   font-size: 16px;
 }
+.btn:hover {
+  cursor: pointer;
+}
 .btn-round {
   border-radius: 15px;
 }
